[update] refactoring main rules & svg rules

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li>Название всех перемен пишутся на английском языке без грамматических ошибок и должны чётко отражать смысл сущности</li>
                         <li>Табуляцыя: 4-х пробельная</li>
                         <li>Используется БЭМ-методологий в разработки вёрстки</li>
-                        <li>Используется эластичная вёрстка, все значение в px должны быть сконвертированны в vw (за это отвечает scss функция px2vw)</li>
+                        <li>Используется эластичная вёрстка, все значение в px должны быть сконвертированны в vw ( за это отвечает scss функция <strong>‎ px2vw ‎</strong> ) ( есть исключение )</li>
                     </ul>
                 </div>
                 <div class="documentation__item">
@@ -85,7 +85,7 @@
                     <div class="documentation__item-attention">
                         <img src="./assets/images/svg/attention-icon.svg" alt="attention-icon">
                         <p>
-                            <strong>Преимущество:</strong> правильный паттерн построение архитектуры, придерживается правила единой ответственности, компоненты остаются чистыми и легко поддерживаются
+                            <strong>Преимущество:</strong> правильный паттерн построение архитектуры, соблюдается правила единой ответственности, компоненты остаются чистыми и легко поддерживаются
                         </p>
                     </div>
                     <a target="_blank" href="https://vuex.vuejs.org/#what-is-a-state-management-pattern">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="documentation__item">
                     <h2>Работа с SVG</h2>
-                    <p>Добавление новых иконок в проект осуществляется только через <strong>sprite.svg</strong></p>
+                    <p>Добавление новых иконок в проект осуществляется только через <strong>sprite.svg</strong> <br>( исключением являются компоненты icons, чьи стили не применяются через sprite )</p>
                     <div class="documentation__item-attention">
                         <img src="./assets/images/svg/attention-icon.svg" alt="attention-icon">
                         <p>
