[update] adding field working with languages files

--- a/index.html
+++ b/index.html
@@ -121,6 +121,22 @@
                         </p>
                     </div>
                 </div>
+                <div class="documentation__item">
+                    <h2>Работа с языковыми файлами</h2>
+                    <p>Изменение в языковых файлах осуществляется паками, языковые файлы дополняются или изменяются строго по задачам о обновлении статических файлов</p>
+                    <p>
+                        Первым этапом определяются нововведение или изменение в файле <strong>en.js</strong> после они конвертируется в <strong>.xml</strong> файл и отправляются клиенту, клиент возврощает <strong>.xml</strong>
+                        файл который конвертируется обратно в <strong>.js</strong> и добовляются в конец файла с соответствуйщим языком, также обновляется версия в файле, новый поля для перевода должны обьявлятся в формате <strong>camelCase</strong>
+                        без вложеностей следуйщем образом:
+                    </p>
+                    <textarea class="documentation__item-code" rows="3" id="codeLanguageImport" cols="30" disabled></textarea>
+                    <div class="documentation__item-attention">
+                        <img src="./assets/images/svg/attention-icon.svg" alt="attention-icon">
+                        <p>
+                            <strong>Преимущество:</strong> так как языковых файлов очень много, для синхронизации полей и изменений лучше использовать такую стратегию, она поможет исключить несоответствие в файлах
+                        </p>
+                    </div>
+                </div>
             </div>
         </main>
     
