[update] refactoring paths for links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="header__wrapper-info">
                     <h1>Документация/Руководство</h1>
                 </div>
-                <a href="/" class="header__wrapper-logo">
+                <a href="./" class="header__wrapper-logo">
                     <img src="./assets/images/svg/logo.svg" alt="logo">
                 </a>
             </div>
@@ -47,7 +47,7 @@
         <section class="navbar">
             <div class="container">
                 <div class="navbar__list">
-                    <a href="/code-patterns.html" class="navbar__list-link">
+                    <a href="./code-patterns.html" class="navbar__list-link">
                         <span>Паттерны написание кода</span>
                     </a>
                 </div>
