--- a/code-patterns.html
+++ b/code-patterns.html
@@ -35,7 +35,7 @@
                 <div class="header__wrapper-info">
                     <h1>Документация/Руководство</h1>
                 </div>
-                <a href="/" class="header__wrapper-logo">
+                <a href="./" class="header__wrapper-logo">
                     <img src="./assets/images/svg/logo.svg" alt="logo">
                 </a>
             </div>
@@ -47,7 +47,7 @@
         <section class="navbar">
             <div class="container">
                 <div class="navbar__list">
-                    <a href="/" class="navbar__list-back">
+                    <a href="./" class="navbar__list-back">
                         <svg><use xlink:href="assets/images/svg/sprite.svg#arrowLeft"></use></svg>
                         <span>Назад</span>
                     </a>
