[update] add improvments in font and text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap&family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.min.css">
     
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="documentation__item">
                     <h2>Работа с языковыми файлами</h2>
-                    <p>Изменение в языковых файлах осуществляется паками, языковые файлы дополняются или изменяются строго по задачам о обновлении статических файлов</p>
+                    <p>Изменение в языковых файлах осуществляется паками, языковые файлы дополняются или изменяются <strong>строго по задачам</strong> о обновлении статических файлов</p>
                     <p>
                         Первым этапом определяются нововведение или изменение в файле <strong>en.js</strong> после они конвертируется в <strong>.xml</strong> файл и отправляются клиенту, клиент возврощает <strong>.xml</strong>
                         файл который конвертируется обратно в <strong>.js</strong> и добовляются в конец файла с соответствуйщим языком, также обновляется версия в файле, новый поля для перевода должны обьявлятся в формате <strong>camelCase</strong>
