[update] add example of using comment TTS

--- a/code-patterns.html
+++ b/code-patterns.html
@@ -67,7 +67,7 @@
                 <div class="documentation__item">
                     <h2>Шаблон обьявление Toast сообщение</h2>
                     <p>
-                        <strong>Toast</strong> сообщение объявляется на странице использование, через компоненту <strong>MyToast</strong> ей присваивается уникальный <strong>name</strong> параметр,
+                        <strong>Toast</strong> сообщение объявляется на странице использование, через компоненту <strong>MyToast</strong>, ей присваивается уникальный <strong>name</strong> параметр,
                         он передаётся в <strong>$emit</strong> через <strong>eventBus</strong> 
                     </p>
                     <div class="documentation__item-attention">
