--- a/index.html
+++ b/index.html
@@ -126,6 +126,12 @@
                             <strong>Преимущество:</strong> так как языковых файлов очень много, для синхронизации полей и изменений лучше использовать такую стратегию, она поможет исключить несоответствие в файлах
                         </p>
                     </div>
+                    <div class="documentation__item-attention">
+                        <img src="./assets/images/svg/attention-icon.svg" alt="attention-icon">
+                        <p><strong>Текст нуждающийся в переводе</strong> помечается комментарием <strong>TTS</strong> означающий <strong>Text To Localization</strong></p>
+                    </div>
+                    <textarea class="documentation__item-code" rows="4" id="codeExampleUsingLocalizationCommentLogic" cols="30" disabled></textarea>
+                    <textarea class="documentation__item-code" rows="5" id="codeExampleUsingLocalizationCommentLayout" cols="30" disabled></textarea>
                 </div>
             </div>
         </main>
