[update] fix abreviation of TTL comm

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="documentation__item-attention">
                         <img src="./assets/images/svg/attention-icon.svg" alt="attention-icon">
-                        <p><strong>Текст нуждающийся в переводе</strong> помечается комментарием <strong>TTS</strong> означающий <strong>Text To Localization</strong></p>
+                        <p><strong>Текст нуждающийся в переводе</strong> помечается комментарием <strong>TTL</strong> означающий <strong>Text To Localization</strong></p>
                     </div>
                     <textarea class="documentation__item-code" rows="4" id="codeExampleUsingLocalizationCommentLogic" cols="30" disabled></textarea>
                     <textarea class="documentation__item-code" rows="5" id="codeExampleUsingLocalizationCommentLayout" cols="30" disabled></textarea>
